# 4dStuff

./: Cargo.toml  README.md
src/: app.rs  camera.rs  fixed_size_buffer.rs  gpu_buffer.rs  gpu_types.rs  hyper_sphere.rs  lib.rs  main.rs  material.rs  math.rs  objects.rs  ray.rs  ray_tracing.wgsl  rotor.rs  state.rs  transform.rs
src/gpu_buffers/: array_buffer.rs  dynamic_buffer.rs  fixed_size_buffer.rs  mod.rs
src/math/: rotor.rs  transform.rs
src/shaders/: full_screen_quad.wgsl  lines.wgsl  ray_tracing.wgsl  tetrahedrons_to_triangles.wgsl  triangles.wgsl
src/state/: gpu_camera.rs
