[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "persistence",
    "wayland",
    "wgpu",
    "x11",
] }
encase = { version = "0.10.0", features = ["cgmath"] }
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
